<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".activities.FirstStepActivity">

    <TextView
        style="@style/screenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_first_step"
        app:layout_constraintBottom_toTopOf="@+id/activityFirstStepChipNumberTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activityFirstStepChipNumberTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_chip_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityFirstStepChipNumberTxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activityFirstStepIdNumberTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_id_card_number"
        app:layout_constraintEnd_toEndOf="@+id/activityFirstStepChipNumberTIL"
        app:layout_constraintStart_toStartOf="@+id/activityFirstStepChipNumberTIL"
        app:layout_constraintTop_toBottomOf="@id/activityFirstStepChipNumberTIL"
        android:layout_marginTop="@dimen/default_field_spacing">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityFirstStepIdNumberTxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activityFirstStepNextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_next"
        app:layout_constraintEnd_toEndOf="@+id/activityFirstStepIdNumberTIL"
        app:layout_constraintStart_toStartOf="@+id/activityFirstStepIdNumberTIL"
        app:layout_constraintTop_toBottomOf="@+id/activityFirstStepIdNumberTIL"
        android:layout_marginTop="@dimen/default_field_spacing"
        android:padding="@dimen/default_padding"/>

</androidx.constraintlayout.widget.ConstraintLayout>