<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">

    <!-- HEADER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsActivityTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/default_padding">

        <ImageButton
            android:id="@+id/detailsActivityBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_field_spacing"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            app:tint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            style="@style/actionBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_details"
            app:layout_constraintBottom_toBottomOf="@+id/detailsActivityBackBtn"
            app:layout_constraintStart_toEndOf="@+id/detailsActivityBackBtn"
            app:layout_constraintTop_toTopOf="@+id/detailsActivityBackBtn"
            android:layout_marginStart="@dimen/default_field_spacing"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- BODY -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/detailsActivityTopBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- BODY > Image Picker -->
            <ImageView
                android:id="@+id/detailsActivityImage"
                android:layout_width="match_parent"
                android:layout_height="365dp"
                android:scaleType="centerCrop"
                android:src="@drawable/keyboard"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- BODY > Fields -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/detailsActivityImage"
                android:padding="@dimen/default_field_spacing"
                >

                <!-- BODY > Fields > Title -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/str_full_name"
                        style="@style/defaultText"/>
                    <TextView
                        android:id="@+id/detailsActivityTitle"
                        style="@style/mediumText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Full name"/>
                </LinearLayout>

                <!-- BODY > Fields > Address -->
                <LinearLayout
                    android:layout_marginTop="@dimen/default_field_spacing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/str_chip_number"
                        style="@style/defaultText" />
                    <TextView
                        android:id="@+id/detailsActivityAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/mediumText"
                        android:text="Chip number"/>
                </LinearLayout>

                <!-- BODY > Fields > Address -->
                <LinearLayout
                    android:layout_marginTop="@dimen/default_field_spacing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/str_birth_date"
                        style="@style/defaultText" />
                    <TextView
                        android:id="@+id/detailsActivityBirthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/mediumText"
                        android:text="Birthdate"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>